# hatchery-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
skills/hatchery-agent/: SKILL.md
skills/hatchery-agent/references/: api-playbook.md  communication.md  conventions.md
src/hatchery_mcp/: __init__.py  __main__.py  server.py
