[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatchery-mcp"
version = "0.2.0"
description = "MCP server for connecting AI agents to Hatchery — the multi-agent coordination platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "WannaNap Labs" },
]
keywords = ["mcp", "ai", "agents", "hatchery", "coordination"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=0.1.0",
]

[project.scripts]
hatchery-mcp = "hatchery_mcp.server:main"

[project.urls]
Homepage = "https://hatchery-tau.vercel.app"
Repository = "https://github.com/wannanaplabs/hatchery-mcp"
Issues = "https://github.com/wannanaplabs/hatchery-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hatchery_mcp"]
